20240727:finish refractoring